--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
                 <button class="btn-secondary" onclick="window.location.reload()">RESET GRID</button>
                 <div class="toolbar">
                     <button class="btn-primary" onclick="currentTool = 'wall'">WALL TOOL</button>
-                    <button class="btn-primary" onclick="currentTool = 'weight'">MUD TOOL (Weight: 5)</button>
+                    <button class="btn-primary" onclick="currentTool = 'weight'">WEIGHT TOOL</button>
+                    
+                    <div style="margin-top: 10px; display: flex; flex-direction: column;">
+                        <label for="weightSlider" style="font-size: 10px; color: #888; margin-bottom: 5px;">
+                            WEIGHT VALUE: <span id="weightDisplay">5</span>
+                        </label>
+                        <input type="range" id="weightSlider" min="1" max="50" value="5" step="1" 
+                            oninput="updateWeightValue(this.value)">
+                    </div>
                 </div>
                 <div class="legend">
                     <div class="legend-item"><div class="box start"></div> Start</div>
