added weighted graph implementation

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav class="navbar">
         <div class="logo">ALGO.CORE</div>
         <div class="nav-links">
-            <span>ABOUT</span>
-            <span>SOURCE</span>
-            <span class="contact">CONTACT</span>
+            <span class="active">GRID VIEW</span>
+            <span onclick="window.location.href='graph.html'">GRAPH VIEW</span>
+            <span class="contact">SOURCE</span>
         </div>
     </nav>
 
