fixed graph not loading bug

--- a/graph.html
+++ b/graph.html
@@ -105,6 +105,6 @@
         </div>
     </main>
 
-    <script src="GraphVisualizer.js"></script>
+    <script src="graphVisualizer.js"></script>
 </body>
 </html>
