--- a/graph.html
+++ b/graph.html
@@ -24,6 +24,7 @@
             border-radius: 50%;
             background: #ff9f43; 
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             font-size: 12px;
@@ -45,6 +46,14 @@
             stroke-dasharray: 8;
             animation: dash 1s linear infinite;
         }
+
+        .graph-node.visited {
+            background: #0abde3; /* Cyan/Blue */
+            box-shadow: 0 0 15px rgba(10, 189, 227, 0.6);
+            color: #fff;
+            transform: scale(1.05);
+        }
+
         @keyframes dash { to { stroke-dashoffset: -16; } }
     </style>
 </head>
